<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="helvetica"
        android:text="Coloque seu CPF"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/ScreenMain_Description"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="130px"
        android:paddingRight="130px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.074">

        <EditText
            android:id="@+id/etCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bottomline"
            android:backgroundTint="@color/azul_primario"
            android:drawableStart="@drawable/ic_person_24_gray"
            android:ems="10"
            android:hint="CPF"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etConfirmaCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:layout_marginBottom="80px"
            android:background="@drawable/et_bottomline"
            android:backgroundTint="@color/azul_primario"
            android:drawableStart="@drawable/ic_person_24_gray"
            android:ems="10"
            android:hint="confirme seu CPF"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAvancar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:backgroundTint="@color/azul_primario"
            android:onClick="avancar"
            android:text="Avançar"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:backgroundTint="@color/azul_primario" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvErrorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGenerateCPF"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:backgroundTint="#D8D8D8"
        android:onClick="generateCPF"
        android:paddingRight="10px"
        app:icon="@drawable/dice_ic"
        app:iconGravity="start"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/ScreenMain_AlreadyHaveAccount"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="possuiLogin"
            android:text="@string/ScreenMain_Login"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>